tool calling and RAG
* automatic exec for PGvector

* bump spring ai to 1.0.0-m7

* add Spring AI RAG for AI reasoning

* bump spring ai to 1.0.0

* refactoring

* setup for tool calling

* tool calling + changed chat model for tool calling

* using toolCalling for RAG

* bump model for better quality + added system message