@@ -5,6 +5,9 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.project.dechelper.model.Information;
 import com.project.dechelper.repositories.InformationRepository;
 import lombok.Builder;
+import org.springframework.ai.document.Document;
+import org.springframework.ai.vectorstore.VectorStore;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.ApplicationArguments;
 import org.springframework.boot.ApplicationRunner;
 import org.springframework.core.annotation.Order;
@@ -14,17 +17,20 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.util.Arrays;
 import java.util.List;
+import java.util.Map;
+import java.util.Vector;
 
 @Component
 @Builder
 @Order(1)
 public class DataLoader implements ApplicationRunner {
 
-    private InformationRepository informationRepository;
+    @Autowired
+    VectorStore vectorStore;
 
     @Override
     public void run(ApplicationArguments args) throws Exception {
-        informationRepository.saveAll(getInformationsFromJson("/json/sample_records.json"));
+        vectorStore.add(getDocumentsFromJson("/json/transformed_records.json"));
     }
 
     private List<Information> getInformationsFromJson(String json) throws IOException {
@@ -33,7 +39,13 @@ public class DataLoader implements ApplicationRunner {
         return Arrays.asList(mapper.readValue(jsonStream, Information[].class));
     }
 
-    private List<Information> createInformations() {
+    private List<Document> getDocumentsFromJson(String json) throws IOException {
+        ObjectMapper mapper = new ObjectMapper();
+        InputStream jsonStream = TypeReference.class.getResourceAsStream(json);
+        return Arrays.asList(mapper.readValue(jsonStream, Document[].class));
+    }
+
+    private List<Document> createDocumentsFromInformation() {
         Information inf1 = Information.builder()
                 .subject("Cousin Martin")
                 .type("Family")
@@ -64,7 +76,14 @@ public class DataLoader implements ApplicationRunner {
                 .type("Work")
                 .content("Work"+" | "+"Project Master John"+" | "+"He is fine with my work, but I can do better")
                 .build();
-        return Arrays.asList(inf1, inf2, inf3, inf4, inf5, inf6);
+        List<Document> documents = List.of(
+                new Document(inf1.getContent(), Map.of("Type",inf1.getType(),"Subject",inf1.getSubject())),
+                new Document(inf2.getContent(), Map.of("Type",inf2.getType(),"Subject",inf2.getSubject())),
+                new Document(inf3.getContent(), Map.of("Type",inf3.getType(),"Subject",inf3.getSubject())),
+                new Document(inf4.getContent(), Map.of("Type",inf4.getType(),"Subject",inf4.getSubject())),
+                new Document(inf5.getContent(), Map.of("Type",inf5.getType(),"Subject",inf5.getSubject()))
+        );
+        return documents;
     }
 
 }
